# browser-mcp

./: .gitignore  LICENSE  README.md  mcp-config.example.json  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
python/src/browser_mcp_nextgen/: __init__.py  __main__.py  bridge.py  server.py
python/tests/: test_bridge.py
scripts/: publish_pypi.sh
