[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "browser-mcp-nextgen"
version = "1.0.1"
description = "BrowserMCP NextGen — AI browser employee MCP server (vision/SOM, code exec, macros, watchdogs) with Chrome extension bridge"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "pomoq-dev", email = "andrey.matveev.mano@gmail.com" }]
keywords = [
  "mcp",
  "model-context-protocol",
  "browser",
  "automation",
  "chrome-extension",
  "playwright",
  "ai-agents",
  "set-of-mark",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "mcp>=1.6.0",
  "websockets>=12.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
  "build",
  "twine",
]

[project.urls]
Homepage = "https://github.com/pomoq-dev/browser-mcp"
Repository = "https://github.com/pomoq-dev/browser-mcp"
Issues = "https://github.com/pomoq-dev/browser-mcp/issues"
Documentation = "https://github.com/pomoq-dev/browser-mcp#readme"

[project.scripts]
browser-mcp-nextgen = "browser_mcp_nextgen.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["python/src/browser_mcp_nextgen"]

[tool.hatch.build.targets.wheel.sources]
"python/src/browser_mcp_nextgen" = "browser_mcp_nextgen"

[tool.hatch.build.targets.sdist]
include = [
  "/python/src",
  "/packages",
  "/README.md",
  "/LICENSE",
  "/mcp-config.example.json",
  "/package.json",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["python/tests"]
pythonpath = ["python/src"]
